--- a/UCIHeartDisease.ipynb
+++ b/UCIHeartDisease.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM1+RbnqaLxI3ZyvZ5PVCfA",
+      "authorship_tag": "ABX9TyNOZj47pRuzSbkWtpQU5PFA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,60 @@
       "metadata": {
         "id": "gB3nTbEhenqO"
       },
-      "execution_count": null,
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install --upgrade scikit-learn"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8HgT1bL5jYgk",
+        "outputId": "e2b916bb-339c-41e9-88ff-2ccf034c35c6"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.10/dist-packages (1.3.2)\n",
+            "Collecting scikit-learn\n",
+            "  Downloading scikit_learn-1.5.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (12 kB)\n",
+            "Requirement already satisfied: numpy>=1.19.5 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (1.26.4)\n",
+            "Requirement already satisfied: scipy>=1.6.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (1.13.1)\n",
+            "Requirement already satisfied: joblib>=1.2.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (1.4.2)\n",
+            "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (3.5.0)\n",
+            "Downloading scikit_learn-1.5.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (13.4 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.4/13.4 MB\u001b[0m \u001b[31m58.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: scikit-learn\n",
+            "  Attempting uninstall: scikit-learn\n",
+            "    Found existing installation: scikit-learn 1.3.2\n",
+            "    Uninstalling scikit-learn-1.3.2:\n",
+            "      Successfully uninstalled scikit-learn-1.3.2\n",
+            "Successfully installed scikit-learn-1.5.1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.tree import plot_tree\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "from sklearn.metrics import ConfusionMatrixDisplay"
+      ],
+      "metadata": {
+        "id": "ftQPEyRHhz8p"
+      },
+      "execution_count": 7,
       "outputs": []
     }
   ]
